fix wrapping issues

--- a/src/resources/postcss/my-tickets/_orders.pcss
+++ b/src/resources/postcss/my-tickets/_orders.pcss
@@ -87,7 +87,6 @@
 
 				& > div {
 					flex: 1 0 100%;
-					flex-basis: var(--tec-grid-width-1-of-4);
 				}
 
 				@media(--viewport-medium) {
@@ -97,6 +96,7 @@
 					& > div {
 						flex: 0 1 auto;
 						order: 2;
+						white-space: nowrap;
 					}
 
 					& > div.list-attendee {
@@ -107,6 +107,7 @@
 					& > div.tribe-ticket-information {
 						flex: 0 1 100%;
 						order: 3;
+						white-space: wrap;
 					}
 
 					& > div:last-child {
